feat: ul로 리스트 UI 배치

--- a/index.html
+++ b/index.html
@@ -10,88 +10,104 @@
   <body>
     <h1>지금 떠나기 좋은 여행</h1>
     <main id="app">
-        <section id="carousel-root">
-          <a href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=DXB&cabin=Y&tripType=RT&duration=7">
-            <section class="carousel-item">
-              <img src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/DXB-list-pc.jpg" alt="서울/인천 두바이 일반석 왕복 1,158,200 대한민국 원"/>
-              <section class="carousel-description">
-                <h2>서울/인천 - 두바이</h2>
-                <h3>일반석 왕복</h3>
-                <div class="price">KRW 1,158,200 ~</div>
+        <ul id="carousel-root">
+          <li>
+            <a href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=DXB&cabin=Y&tripType=RT&duration=7">
+              <section class="carousel-item">
+                <img src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/DXB-list-pc.jpg" alt="서울/인천 두바이 일반석 왕복 1,158,200 대한민국 원"/>
+                <section class="carousel-description">
+                  <h2>서울/인천 - 두바이</h2>
+                  <h3>일반석 왕복</h3>
+                  <div class="price">KRW 1,158,200 ~</div>
+                </section>
               </section>
-            </section>
-          </a>
-          <a href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=FUK&cabin=Y&tripType=RT&duration=7">
-            <section class="carousel-item">
-              <img src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/FUK-list-pc.jpg" alt="서울/인천 후쿠오카 일반석 왕복 340,400 대한민국 원"/>
-              <section class="carousel-description">
-                <h2>서울/인천 - 후쿠오카</h2>
-                <h3>일반석 왕복</h3>
-                <div class="price">KRW 340,400 ~</div>
+            </a>
+          </li>
+          <li>
+            <a href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=FUK&cabin=Y&tripType=RT&duration=7">
+              <section class="carousel-item">
+                <img src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/FUK-list-pc.jpg" alt="서울/인천 후쿠오카 일반석 왕복 340,400 대한민국 원"/>
+                <section class="carousel-description">
+                  <h2>서울/인천 - 후쿠오카</h2>
+                  <h3>일반석 왕복</h3>
+                  <div class="price">KRW 340,400 ~</div>
+                </section>
               </section>
-            </section>
-          </a>
-          <a href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=HKT&cabin=Y&tripType=RT&duration=7">
-            <section class="carousel-item">
-              <img src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/HKT-list-pc.jpg" alt="서울/인천 푸캣 일반석 왕복 713,000 대한민국 원"/>
-              <section class="carousel-description">
-                <h2>서울/인천 - 푸캣</h2>
-                <h3>일반석 왕복</h3>
-                <div class="price">KRW 713,000 ~</div>
+            </a>
+          </li>
+          <li>
+            <a href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=HKT&cabin=Y&tripType=RT&duration=7">
+              <section class="carousel-item">
+                <img src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/HKT-list-pc.jpg" alt="서울/인천 푸캣 일반석 왕복 713,000 대한민국 원"/>
+                <section class="carousel-description">
+                  <h2>서울/인천 - 푸캣</h2>
+                  <h3>일반석 왕복</h3>
+                  <div class="price">KRW 713,000 ~</div>
+                </section>
               </section>
-            </section>
-          </a>
-          <a href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=CNX&duration=7&cabin=Y">
-            <section class="carousel-item">
-              <img src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/CNX-list-pc.jpg" alt="서울/인천 치앙마이 일반석 왕복 839,000 대한민국 원"/>
-              <section class="carousel-description">
-                <h2>서울/인천 - 치앙마이</h2>
-                <h3>일반석 왕복</h3>
-                <div class="price">KRW 839,000 ~</div>
+            </a>
+          </li>
+          <li>
+            <a href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=CNX&duration=7&cabin=Y">
+              <section class="carousel-item">
+                <img src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/CNX-list-pc.jpg" alt="서울/인천 치앙마이 일반석 왕복 839,000 대한민국 원"/>
+                <section class="carousel-description">
+                  <h2>서울/인천 - 치앙마이</h2>
+                  <h3>일반석 왕복</h3>
+                  <div class="price">KRW 839,000 ~</div>
+                </section>
               </section>
-            </section>
-          </a>
-          <a href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=BCN&cabin=Y&tripType=RT&duration=7">
-            <section class="carousel-item">
-              <img src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/BCN-list-pc.jpg" alt="서울/인천 바르셀로나 일반석 왕복 1,546,400 대한민국 원"/>
-              <section class="carousel-description">
-                <h2>서울/인천 - 바르셀로나</h2>
-                <h3>일반석 왕복</h3>
-                <div class="price">KRW 1,546,400 ~</div>
+            </a>
+          </li>
+          <li>
+            <a href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=BCN&cabin=Y&tripType=RT&duration=7">
+              <section class="carousel-item">
+                <img src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/BCN-list-pc.jpg" alt="서울/인천 바르셀로나 일반석 왕복 1,546,400 대한민국 원"/>
+                <section class="carousel-description">
+                  <h2>서울/인천 - 바르셀로나</h2>
+                  <h3>일반석 왕복</h3>
+                  <div class="price">KRW 1,546,400 ~</div>
+                </section>
               </section>
-            </section>
-          </a>
-          <a href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=HAN&cabin=Y&tripType=RT&duration=7">
-            <section class="carousel-item">
-              <img src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/HAN-list-pc.jpg" alt="서울/인천 하노이 일반석 왕복 527,600 대한민국 원"/>
-              <section class="carousel-description">
-                <h2>서울/인천 - 하노이</h2>
-                <h3>일반석 왕복</h3>
-                <div class="price">KRW 527,600 ~</div>
+            </a>
+          </li>
+          <li>
+            <a href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=HAN&cabin=Y&tripType=RT&duration=7">
+              <section class="carousel-item">
+                <img src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/HAN-list-pc.jpg" alt="서울/인천 하노이 일반석 왕복 527,600 대한민국 원"/>
+                <section class="carousel-description">
+                  <h2>서울/인천 - 하노이</h2>
+                  <h3>일반석 왕복</h3>
+                  <div class="price">KRW 527,600 ~</div>
+                </section>
               </section>
-            </section>
-          </a>
-          <a href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=FCO&cabin=Y&tripType=RT&duration=7">
-            <section class="carousel-item">
-              <img src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/FCO-list-pc.jpg" alt="서울/인천 로마/레오나르도 다빈치 일반석 왕복 1,454,400 대한민국 원"/>
-              <section class="carousel-description">
-                <h2>서울/인천 - 로마/레오나르도 다빈치</h2>
-                <h3>일반석 왕복</h3>
-                <div class="price">KRW 1,454,400 ~</div>
+            </a>
+          </li>
+          <li>
+            <a href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=FCO&cabin=Y&tripType=RT&duration=7">
+              <section class="carousel-item">
+                <img src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/FCO-list-pc.jpg" alt="서울/인천 로마/레오나르도 다빈치 일반석 왕복 1,454,400 대한민국 원"/>
+                <section class="carousel-description">
+                  <h2>서울/인천 - 로마/레오나르도 다빈치</h2>
+                  <h3>일반석 왕복</h3>
+                  <div class="price">KRW 1,454,400 ~</div>
+                </section>
               </section>
-            </section>
-          </a>
-          <a href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=HNL&cabin=Y&tripType=RT&duration=7">
-            <section class="carousel-item">
-              <img src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/HNL-list-pc.jpg" alt="서울/인천 호놀룰루(하와이) 일반석 왕복 1,245,600 대한민국 원"/>
-              <section class="carousel-description">
-                <h2>서울/인천 - 호놀룰루(하와이)</h2>
-                <h3>일반석 왕복</h3>
-                <div class="price">KRW 1,245,600 ~</div>
+            </a>
+          </li>
+          <li>
+            <a href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=HNL&cabin=Y&tripType=RT&duration=7">
+              <section class="carousel-item">
+                <img src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/HNL-list-pc.jpg" alt="서울/인천 호놀룰루(하와이) 일반석 왕복 1,245,600 대한민국 원"/>
+                <section class="carousel-description">
+                  <h2>서울/인천 - 호놀룰루(하와이)</h2>
+                  <h3>일반석 왕복</h3>
+                  <div class="price">KRW 1,245,600 ~</div>
+                </section>
               </section>
-            </section>
-          </a>
-        </section>
+            </a>
+          </li>
+        </ul>
         <button id="carousel-left" class="carousel-button" type="button" aria-label="이전">⬅️</button>
         <button id="carousel-right" class="carousel-button" type="button" aria-label="다음">➡️</button>
         <div id="carousel-button-live" aria-live="assertive" class="sr-only"></div>
