--- a/src/index.html
+++ b/src/index.html
@@ -47,6 +47,7 @@
             </div>
           </div>
           <div class="panel" id="airline-product">
+            <h1>여행상품 소개</h1>
             <div class="carousel-container">
               <div class="carousel slide" data-interval="2500">
                 <ul class="carousel-inner">
@@ -134,14 +135,14 @@
 
                 <!-- Controls -->
                 <div class="left carousel-control">
-                  <button type="button" data-slide="prev">
-                    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                  <button type="button" data-slide="prev" aria-label="이전 항목">
+                    <span aria-hidden="true">⬅️</span>
                     <span class="sr-only">Previous</span>
                   </button>
                 </div>
                 <div class="right carousel-control">
-                  <button type="button" data-slide="next">
-                    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                  <button type="button" data-slide="next" aria-label="다음 항목">
+                    <span class="" aria-hidden="true">➡</span>
                     <span class="sr-only">Next</span>
                   </button>
                 </div>
