--- a/src/index.html
+++ b/src/index.html
@@ -47,7 +47,7 @@
             </div>
           </div>
           <div class="panel" id="airline-product">
-            <h1>여행상품 소개</h1>
+            <h1>지금 떠나기 좋은 여행</h1>
             <div class="carousel-container">
               <div class="carousel slide" data-interval="2500">
                 <ul class="carousel-inner">
@@ -137,13 +137,13 @@
                 <div class="left carousel-control">
                   <button type="button" data-slide="prev" aria-label="이전 항목">
                     <span aria-hidden="true">⬅️</span>
-                    <span class="sr-only">Previous</span>
+                    <span class="sr-only">이전항목</span>
                   </button>
                 </div>
                 <div class="right carousel-control">
                   <button type="button" data-slide="next" aria-label="다음 항목">
-                    <span class="" aria-hidden="true">➡</span>
-                    <span class="sr-only">Next</span>
+                    <span aria-hidden="true">➡</span>
+                    <span class="sr-only">다음항목</span>
                   </button>
                 </div>
               </div>
