feat: 버튼 label 변경

--- a/src/index.html
+++ b/src/index.html
@@ -48,16 +48,17 @@
           </div>
           <div class="panel" id="airline-product">
             <h1>지금 떠나기 좋은 여행</h1>
+            <span class="sr-only">목록 8개 항목 포함</span>
             <div class="carousel-container">
               <!-- Controls -->
               <div class="left carousel-control">
-                <button type="button" data-slide="prev" aria-label="이전 항목">
+                <button type="button" data-slide="prev" aria-label="이전 항목" aria-disabled="true">
                   <span aria-hidden="true">⬅️</span>
                   <span class="sr-only">이전항목</span>
                 </button>
               </div>
               <div class="right carousel-control">
-                <button type="button" data-slide="next" aria-label="다음 항목">
+                <button type="button" data-slide="next" aria-label="다음 항목" aria-disabled="true">
                   <span aria-hidden="true">➡</span>
                   <span class="sr-only">다음항목</span>
                 </button>
