feat: aria-atomic 속성 제거

--- a/carousel.html
+++ b/carousel.html
@@ -158,16 +158,8 @@
           </li>
         </ul>
         <div class="button-wrapper">
-          <button
-            class="prev-button button"
-            aria-label="이전"
-            aria-atomic="true"
-          ></button>
-          <button
-            class="next-button button"
-            aria-label="다음"
-            aria-atomic="true"
-          ></button>
+          <button class="prev-button button" aria-label="이전"></button>
+          <button class="next-button button" aria-label="다음"></button>
         </div>
       </article>
     </section>
