feat: tabindex 적용

--- a/carousel.html
+++ b/carousel.html
@@ -12,7 +12,7 @@
       <h1>지금 떠나기 좋은 여행</h1>
       <article class="item-container">
         <ul class="item-list">
-          <li class="item" data-id="0">
+          <li class="item" tabindex="0" data-id="0">
             <a
               class="item-link"
               href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=DXB&duration=7&cabin=Y"
@@ -30,7 +30,7 @@
               </div>
             </a>
           </li>
-          <li class="item" data-id="1">
+          <li class="item" tabindex="1" data-id="1">
             <a
               class="item-link"
               href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=FUK&cabin=Y&tripType=RT&duration=7"
@@ -48,7 +48,7 @@
               </div>
             </a>
           </li>
-          <li class="item" data-id="2">
+          <li class="item" tabindex="2" data-id="2">
             <a
               class="item-link"
               href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=HKT&cabin=Y&tripType=RT&duration=7"
@@ -66,7 +66,7 @@
               </div>
             </a>
           </li>
-          <li class="item" data-id="3">
+          <li class="item" tabindex="3" data-id="3">
             <a
               class="item-link"
               href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=CNX&duration=7&cabin=Y"
@@ -84,7 +84,7 @@
               </div>
             </a>
           </li>
-          <li class="item" data-id="4">
+          <li class="item" tabindex="4" data-id="4">
             <a
               class="item-link"
               href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=BCN&cabin=Y&tripType=RT&duration=7"
@@ -102,7 +102,7 @@
               </div>
             </a>
           </li>
-          <li class="item" data-id="5">
+          <li class="item" tabindex="5" data-id="5">
             <a
               class="item-link"
               href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=HAN&cabin=Y&tripType=RT&duration=7"
@@ -120,7 +120,7 @@
               </div>
             </a>
           </li>
-          <li class="item" data-id="6">
+          <li class="item" tabindex="6" data-id="6">
             <a
               class="item-link"
               href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=FCO&cabin=Y&tripType=RT&duration=7"
@@ -138,7 +138,7 @@
               </div>
             </a>
           </li>
-          <li class="item" data-id="7">
+          <li class="item" tabindex="7" data-id="7">
             <a
               class="item-link"
               href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=HNL&cabin=Y&tripType=RT&duration=7"
