feat: 버튼 상태 메시지 추가

--- a/carousel.html
+++ b/carousel.html
@@ -170,6 +170,7 @@
           ></button>
         </div>
       </article>
+      <div id="button-status" class="sr-only" role="status"></div>
     </section>
     <script type="module" src="./src/js/carousel.js"></script>
   </body>
