--- a/carousel.html
+++ b/carousel.html
@@ -17,13 +17,13 @@
               href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=DXB&cabin=Y&tripType=RT&duration=7"
               class="slide-link"
               target="_blank"
-              title=""
+              aria-label="서울/인천 - 두바이 일반석 왕복 1158000원부터"
               ><img
                 src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/DXB-list-pc.jpg"
                 alt=""
               />
             </a>
-            <div class="slide-desc">
+            <div class="slide-desc" aria-hidden="true">
               <p class="slide-desc__location">서울/인천 - 두바이</p>
               <p class="slide-desc__type">일반석 왕복</p>
               <p class="slide-desc__price">KRW 1,158,000 ~</p>
@@ -34,13 +34,14 @@
               href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=FUK&cabin=Y&tripType=RT&duration=7"
               class="slide-link"
               target="_blank"
+              aria-label="서울/인천 - 후쿠오카 일반석 왕복 340400원부터"
             >
               <img
                 src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/FUK-list-pc.jpg"
                 alt=""
               />
             </a>
-            <div class="slide-desc">
+            <div class="slide-desc" aria-hidden="true">
               <p class="slide-desc__location">서울/인천 - 후쿠오카</p>
               <p class="slide-desc__type">일반석 왕복</p>
               <p class="slide-desc__price">KRW 340,400 ~</p>
@@ -51,13 +52,14 @@
               href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=HKT&cabin=Y&tripType=RT&duration=7"
               class="slide-link"
               target="_blank"
+              aria-label="서울/인천 - 푸껫 일반석 왕복 704100원부터"
             >
               <img
                 src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/HKT-list-pc.jpg"
                 alt=""
               />
             </a>
-            <div class="slide-desc">
+            <div class="slide-desc" aria-hidden="true">
               <p class="slide-desc__location">서울/인천 - 푸껫</p>
               <p class="slide-desc__type">일반석 왕복</p>
               <p class="slide-desc__price">KRW 704,100 ~</p>
@@ -68,13 +70,14 @@
               href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=CNX&cabin=Y&tripType=RT&duration=7"
               class="slide-link"
               target="_blank"
+              aria-label="서울/인천 - 치앙마이 일반석 왕복 839100원부터"
             >
               <img
                 src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/CNX-list-pc.jpg"
                 alt=""
               />
             </a>
-            <div class="slide-desc">
+            <div class="slide-desc" aria-hidden="true">
               <p class="slide-desc__location">서울/인천 - 치앙마이</p>
               <p class="slide-desc__type">일반석 왕복</p>
               <p class="slide-desc__price">KRW 839,100 ~</p>
@@ -85,13 +88,14 @@
               href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=BCN&cabin=Y&tripType=RT&duration=7"
               class="slide-link"
               target="_blank"
+              aria-label="서울/인천 - 바르셀로나 일반석 왕복 1546300원부터"
             >
               <img
                 src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/BCN-list-pc.jpg"
                 alt=""
               />
             </a>
-            <div class="slide-desc">
+            <div class="slide-desc" aria-hidden="true">
               <p class="slide-desc__location">서울/인천 - 바르셀로나</p>
               <p class="slide-desc__type">일반석 왕복</p>
               <p class="slide-desc__price">KRW 1,546,300 ~</p>
@@ -102,13 +106,14 @@
               href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=HAN&cabin=Y&tripType=RT&duration=7"
               class="slide-link"
               target="_blank"
+              aria-label="서울/인천 - 하노이 일반석 왕복 527500원부터"
             >
               <img
                 src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/HAN-list-pc.jpg"
                 alt=""
               />
             </a>
-            <div class="slide-desc">
+            <div class="slide-desc" aria-hidden="true">
               <p class="slide-desc__location">서울/인천 - 하노이</p>
               <p class="slide-desc__type">일반석 왕복</p>
               <p class="slide-desc__price">KRW 527,500 ~</p>
@@ -119,13 +124,14 @@
               href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=FCO&duration=7&cabin=Y"
               class="slide-link"
               target="_blank"
+              aria-label="서울/인천 - 로마/레오나르도 다빈치 일반석 왕복 1454200원부터"
             >
               <img
                 src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/FCO-list-pc.jpg"
                 alt=""
               />
             </a>
-            <div class="slide-desc">
+            <div class="slide-desc" aria-hidden="true">
               <p class="slide-desc__location">
                 서울/인천 - 로마/레오나르도 다빈치
               </p>
@@ -138,13 +144,14 @@
               href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=HNL&cabin=Y&tripType=RT&duration=7"
               class="slide-link"
               target="_blank"
+              aria-label="서울/인천 - 호놀룰루 일반석 왕복 1244900원부터"
             >
               <img
                 src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/HNL-list-pc.jpg"
                 alt=""
               />
             </a>
-            <div class="slide-desc">
+            <div class="slide-desc" aria-hidden="true">
               <p class="slide-desc__location">서울/인천 - 호놀룰루 (하와이)</p>
               <p class="slide-desc__type">일반석 왕복</p>
               <p class="slide-desc__price">KRW 1,244,900 ~</p>
