feat: content에 focus 안되도록 수정

--- a/carousel.html
+++ b/carousel.html
@@ -22,7 +22,7 @@
                 alt=""
                 class="item-image"
               />
-              <div class="content-wrapper">
+              <div class="content-wrapper" tabindex="-1">
                 <p class="location">서울/인천 - 두바이</p>
                 <p class="seat">일반석 왕복</p>
                 <span class="price">KRW 1,121,600</span>
@@ -40,7 +40,7 @@
                 alt=""
                 class="item-image"
               />
-              <div class="content-wrapper">
+              <div class="content-wrapper" tabindex="-1">
                 <p class="location">서울/인천 - 후쿠오카</p>
                 <p class="seat">일반석 왕복</p>
                 <span class="price">KRW 340,400</span>
@@ -58,7 +58,7 @@
                 alt=""
                 class="item-image"
               />
-              <div class="content-wrapper">
+              <div class="content-wrapper" tabindex="-1">
                 <p class="location">서울/인천 - 푸껫</p>
                 <p class="seat">일반석 왕복</p>
                 <span class="price">KRW 704,200</span>
@@ -76,7 +76,7 @@
                 alt=""
                 class="item-image"
               />
-              <div class="content-wrapper">
+              <div class="content-wrapper" tabindex="-1">
                 <p class="location">서울/인천 - 치앙마이</p>
                 <p class="seat">일반석 왕복</p>
                 <span class="price">KRW 839,100</span>
@@ -94,7 +94,7 @@
                 alt=""
                 class="item-image"
               />
-              <div class="content-wrapper">
+              <div class="content-wrapper" tabindex="-1">
                 <p class="location">서울/인천 - 바르셀로나</p>
                 <p class="seat">일반석 왕복</p>
                 <span class="price">KRW 1,546,300</span>
@@ -112,7 +112,7 @@
                 alt=""
                 class="item-image"
               />
-              <div class="content-wrapper">
+              <div class="content-wrapper" tabindex="-1">
                 <p class="location">서울/인천 - 하노이</p>
                 <p class="seat">일반석 왕복</p>
                 <span class="price">KRW 527,500</span>
@@ -130,7 +130,7 @@
                 alt=""
                 class="item-image"
               />
-              <div class="content-wrapper">
+              <div class="content-wrapper" tabindex="-1">
                 <p class="location">서울/인천 - 로마/레오나르도 다빈치</p>
                 <p class="seat">일반석 왕복</p>
                 <span class="price">KRW 1,454,200</span>
@@ -148,7 +148,7 @@
                 alt=""
                 class="item-image"
               />
-              <div class="content-wrapper">
+              <div class="content-wrapper" tabindex="-1">
                 <p class="location">서울/인천 - 호놀룰루 (하와이)</p>
                 <p class="seat">일반석 왕복</p>
                 <span class="price">KRW 1,244,900</span>
