feat: a 태그에 aria-label 추가

--- a/carousel.html
+++ b/carousel.html
@@ -16,17 +16,18 @@
             <a
               class="item-link"
               href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=DXB&duration=7&cabin=Y"
+              aria-label="서울/인천 - 두바이 일반석 왕복 1,121,600 대한민국원 부터"
             >
               <img
                 src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/DXB-list-pc.jpg"
                 alt=""
                 class="item-image"
               />
-              <div class="content-wrapper">
+              <div class="content-wrapper" aria-hidden="true">
                 <p class="location">서울/인천 - 두바이</p>
                 <p class="seat">일반석 왕복</p>
                 <span class="price">KRW 1,121,600</span>
-                <span class="price" aria-hidden="true">~</span>
+                <span class="price">~</span>
               </div>
             </a>
           </li>
@@ -34,17 +35,18 @@
             <a
               class="item-link"
               href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=FUK&cabin=Y&tripType=RT&duration=7"
+              aria-label="서울/인천 - 후쿠오카 일반석 왕복 340,400 대한민국원 부터"
             >
               <img
                 src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/FUK-list-pc.jpg"
                 alt=""
                 class="item-image"
               />
-              <div class="content-wrapper">
+              <div class="content-wrapper" aria-hidden="true">
                 <p class="location">서울/인천 - 후쿠오카</p>
                 <p class="seat">일반석 왕복</p>
                 <span class="price">KRW 340,400</span>
-                <span class="price" aria-hidden="true">~</span>
+                <span class="price">~</span>
               </div>
             </a>
           </li>
@@ -52,17 +54,18 @@
             <a
               class="item-link"
               href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=HKT&cabin=Y&tripType=RT&duration=7"
+              aria-label="서울/인천 - 푸껫 일반석 왕복 704,200 대한민국원 부터"
             >
               <img
                 src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/HKT-list-pc.jpg"
                 alt=""
                 class="item-image"
               />
-              <div class="content-wrapper">
+              <div class="content-wrapper" aria-hidden="true">
                 <p class="location">서울/인천 - 푸껫</p>
                 <p class="seat">일반석 왕복</p>
                 <span class="price">KRW 704,200</span>
-                <span class="price" aria-hidden="true">~</span>
+                <span class="price">~</span>
               </div>
             </a>
           </li>
@@ -70,17 +73,18 @@
             <a
               class="item-link"
               href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=CNX&duration=7&cabin=Y"
+              aria-label="서울/인천 - 치앙마이 일반석 왕복 839,100 대한민국원 부터"
             >
               <img
                 src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/CNX-list-pc.jpg"
                 alt=""
                 class="item-image"
               />
-              <div class="content-wrapper">
+              <div class="content-wrapper" aria-hidden="true">
                 <p class="location">서울/인천 - 치앙마이</p>
                 <p class="seat">일반석 왕복</p>
                 <span class="price">KRW 839,100</span>
-                <span class="price" aria-hidden="true">~</span>
+                <span class="price">~</span>
               </div>
             </a>
           </li>
@@ -88,17 +92,18 @@
             <a
               class="item-link"
               href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=BCN&cabin=Y&tripType=RT&duration=7"
+              aria-label="서울/인천 - 바르셀로나 일반석 왕복 1,546,300 대한민국원 부터"
             >
               <img
                 src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/BCN-list-pc.jpg"
                 alt=""
                 class="item-image"
               />
-              <div class="content-wrapper">
+              <div class="content-wrapper" aria-hidden="true">
                 <p class="location">서울/인천 - 바르셀로나</p>
                 <p class="seat">일반석 왕복</p>
                 <span class="price">KRW 1,546,300</span>
-                <span class="price" aria-hidden="true">~</span>
+                <span class="price">~</span>
               </div>
             </a>
           </li>
@@ -106,17 +111,18 @@
             <a
               class="item-link"
               href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=HAN&cabin=Y&tripType=RT&duration=7"
+              aria-label="서울/인천 - 하노이 일반석 왕복 527,500 대한민국원 부터"
             >
               <img
                 src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/HAN-list-pc.jpg"
                 alt=""
                 class="item-image"
               />
-              <div class="content-wrapper">
+              <div class="content-wrapper" aria-hidden="true">
                 <p class="location">서울/인천 - 하노이</p>
                 <p class="seat">일반석 왕복</p>
                 <span class="price">KRW 527,500</span>
-                <span class="price" aria-hidden="true">~</span>
+                <span class="price">~</span>
               </div>
             </a>
           </li>
@@ -124,17 +130,18 @@
             <a
               class="item-link"
               href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=FCO&cabin=Y&tripType=RT&duration=7"
+              aria-label="서울/인천 - 로마/레오나르도 다빈치 일반석 왕복 1,454,200 대한민국원 부터"
             >
               <img
                 src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/FCO-list-pc.jpg"
                 alt=""
                 class="item-image"
               />
-              <div class="content-wrapper">
+              <div class="content-wrapper" aria-hidden="true">
                 <p class="location">서울/인천 - 로마/레오나르도 다빈치</p>
                 <p class="seat">일반석 왕복</p>
                 <span class="price">KRW 1,454,200</span>
-                <span class="price" aria-hidden="true">~</span>
+                <span class="price">~</span>
               </div>
             </a>
           </li>
@@ -142,17 +149,18 @@
             <a
               class="item-link"
               href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=HNL&cabin=Y&tripType=RT&duration=7"
+              aria-label="서울/인천 - 호놀룰루(하와이) 일반석 왕복 1,244,900 대한민국원 부터"
             >
               <img
                 src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/HNL-list-pc.jpg"
                 alt=""
                 class="item-image"
               />
-              <div class="content-wrapper">
+              <div class="content-wrapper" aria-hidden="true">
                 <p class="location">서울/인천 - 호놀룰루 (하와이)</p>
                 <p class="seat">일반석 왕복</p>
                 <span class="price">KRW 1,244,900</span>
-                <span class="price" aria-hidden="true">~</span>
+                <span class="price">~</span>
               </div>
             </a>
           </li>
