feat: KRW를 모바일에서도 대한민국 원으로 읽어줄 수 있도록  수정

--- a/carousel.html
+++ b/carousel.html
@@ -29,7 +29,8 @@
               </h2>
               <p class="description-class">일반석 왕복</p>
               <p class="description-price">
-                KRW 1,157,500 <span aria-hidden="true">~</span>
+                <span aria-label="대한민국 원">KRW</span> 1,157,500
+                <span aria-hidden="true">~</span>
               </p>
             </div>
           </a>
@@ -53,7 +54,8 @@
               </h2>
               <p class="description-class">일반석 왕복</p>
               <p class="description-price">
-                KRW 340,200 <span aria-hidden="true">~</span>
+                <span aria-label="대한민국 원">KRW</span> 340,200
+                <span aria-hidden="true">~</span>
               </p>
             </div>
           </a>
@@ -76,7 +78,8 @@
               </h2>
               <p class="description-class">일반석 왕복</p>
               <p class="description-price">
-                KRW 1,157,500 <span aria-hidden="true">~</span>
+                <span aria-label="대한민국 원">KRW</span> 1,157,500
+                <span aria-hidden="true">~</span>
               </p>
             </div>
           </a>
@@ -99,7 +102,8 @@
               </h2>
               <p class="description-class">일반석 왕복</p>
               <p class="description-price">
-                KRW 794,100 <span aria-hidden="true">~</span>
+                <span aria-label="대한민국 원">KRW</span> 794,100
+                <span aria-hidden="true">~</span>
               </p>
             </div>
           </a>
@@ -122,7 +126,8 @@
               </h2>
               <p class="description-class">일반석 왕복</p>
               <p class="description-price">
-                KRW 1,546,300 <span aria-hidden="true">~</span>
+                <span aria-label="대한민국 원">KRW</span> 1,546,300
+                <span aria-hidden="true">~</span>
               </p>
             </div>
           </a>
@@ -145,7 +150,8 @@
               </h2>
               <p class="description-class">일반석 왕복</p>
               <p class="description-price">
-                KRW 486,900 <span aria-hidden="true">~</span>
+                <span aria-label="대한민국 원">KRW</span> 486,900
+                <span aria-hidden="true">~</span>
               </p>
             </div>
           </a>
@@ -168,7 +174,8 @@
               </h2>
               <p class="description-class">일반석 왕복</p>
               <p class="description-price">
-                KRW 1,454,200 <span aria-hidden="true">~</span>
+                <span aria-label="대한민국 원">KRW</span> 1,454,200
+                <span aria-hidden="true">~</span>
               </p>
             </div>
           </a>
@@ -191,7 +198,8 @@
               </h2>
               <p class="description-class">일반석 왕복</p>
               <p class="description-price">
-                KRW 1,243,800 <span aria-hidden="true">~</span>
+                <span aria-label="대한민국 원">KRW</span> 1,243,800
+                <span aria-hidden="true">~</span>
               </p>
             </div>
           </a>
