fix: 갤럭시에서 스크린리더 못읽는 오류 수정

--- a/carousel.html
+++ b/carousel.html
@@ -208,6 +208,7 @@
           class="sr-only sr-carousel-message"
           aria-live="polite"
           aria-relevant="additions"
+          aria-atomic="true"
         ></span>
       </ul>
 
@@ -216,11 +217,13 @@
           type="button"
           class="prev-arrow-button"
           aria-label="이전"
+          aria-live="polite"
         ></button>
         <button
           type="button"
           class="next-arrow-button"
           aria-label="다음"
+          aria-live="polite"
         ></button>
       </div>
     </div>
